# voice-agent-tests

./: .gitignore  README.md  justfile  pyproject.toml
app/: config.py  main.py
app/asr/: __init__.py  base.py  factory.py  openai_provider.py
app/prompts/: __init__.py  openai_realtime.txt
app/static/: index.html  script.js  style.css
frontend/: app.js  audio.js  index.html  playback.js  style.css
